# warframe-market-predictor

./: .env.example  .gitignore  README.md  analyzer.py  config.py  database.py  features.py  fetcher.py  generate_prediction_report.py  main.py  migrate_sqlite_to_csv.py  notifier.py  prediction_result.txt  pyproject.toml  relic_analyzer.py  relic_scraper.py  requirements.txt  scheduler.py  test_results.txt  watchlist.py
src/predictor/: main.py
src/predictor/core/: config.py  database.py
src/predictor/market/: analyzer.py  features.py  fetcher.py  watchlist.py
src/predictor/relics/: relic_analyzer.py  relic_scraper.py
src/predictor/service/: notifier.py  scheduler.py
tests/: conftest.py  test_features.py
