[project]
name = "warframe-market-predictor"
version = "1.0.0"
description = "Background service that analyses Warframe.market price trends and sends daily Discord reports with buy/sell/hold signals and relic farming recommendations."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "apscheduler==3.10.4",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.3.0",
    # numpy installed separately (see README — use conda or --only-binary on Windows)
]

[project.scripts]
warframe-predictor = "main:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

# ─── Ruff (linter + formatter) ────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length    = 100
src            = ["."]
exclude        = [".git", "__pycache__", "data", ".venv", "venv"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8 naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long — handled by formatter
    "B008",  # do not perform function calls in argument defaults
    "SIM108", # ternary instead of if-else (we sometimes prefer explicit)
]

[tool.ruff.lint.isort]
known-first-party = ["config", "database", "features", "analyzer", "fetcher",
                     "notifier", "scheduler", "watchlist", "relic_scraper", "relic_analyzer"]

[tool.ruff.format]
quote-style              = "double"
indent-style             = "space"
skip-magic-trailing-comma = false

# ─── Mypy (type checker) ──────────────────────────────────────────────────────
[tool.mypy]
python_version         = "3.11"
strict                 = false
ignore_missing_imports = true   # numpy/sklearn stubs not always available
warn_unused_ignores    = true
warn_return_any        = false  # too noisy for a service like this
exclude                = ["data/", "tests/conftest.py"]

# ─── Pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths    = ["tests"]
addopts      = "-v --tb=short --strict-markers"
markers      = [
    "unit: fast unit tests with no I/O",
    "integration: tests that hit the filesystem or network",
]

[tool.coverage.run]
source  = ["."]
omit    = ["tests/*", "data/*", "main.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
